# motimer

./: .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: publish_notebook.yml
motimer/: __init__.py
