[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motimer"
version = "0.1.0"
description = "A beautiful timer and stopwatch widget for marimo notebooks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sam Parmar", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "anywidget",
    "traitlets",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/parmsam/motimer"
Repository = "https://github.com/parmsam/motimer"
Issues = "https://github.com/parmsam/motimer/issues"

[tool.setuptools.packages.find]
include = ["motimer*"]
